idea/testData/multiModuleHighlighting/platform1/jvm/jvm.kt
<error descr="[PLATFORM_DEFINITION_WITHOUT_DECLARATION] Modifier 'impl' is only applicable to members that are initially declared in platform-independent code">impl</error> class Your {

}

platform class <error descr="[PLATFORM_DECLARATION_WITHOUT_DEFINITION] Declaration 'His' has no definition in platform module for JVM">His</error> {

}

platform class Their {

}

impl class Their {

}